--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -49,7 +49,8 @@ section{ padding: 60px 0px; }
     .row,
     .name { padding: 0 4%; }
     .col {
-        width: 100%;
+		width: 100%;
+		height: 90%;
         margin: 0 0 4% 0;
     }
 
