--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,6 +7,45 @@ Sticky MENU 790 px a nižší. OTEVŘU ZAVŘU zvětším obrazovku a menu UMŘE 
 
 
 
+/*
+LANGUAGE SWITCH 
+*/
+
+.ln1 {display: none;}
+.ln2 {display: none;}
+.ln3 {display: none;}
+
+.lang1 .b.ln1 {display: block;}
+.lang2 .b.ln2 {display: block;}
+.lang3 .b.ln3 {display: block;}
+.lang1 .ln1 {display: inline;}
+.lang2 .ln2 {display: inline;}
+.lang3 .ln3 {display: inline;}
+
+.lang_switch{
+  color:gray;
+  font-size: 25px;
+z-index: 19999;
+position: fixed;
+margin-top: 60px;
+background-color: #fff;
+border: 0.5rem outset rgb(65, 153, 236);
+
+
+border-radius: 12px;
+font: bold 1rem sans-serif;
+
+
+outline-offset: 0.3rem;
+}
+
+
+
+
+
+
+
+
 /* ----------------------------------------------- */
 /* BASIC SETUP */
 /* ----------------------------------------------- */
@@ -109,6 +148,17 @@ h2:after {
 strong {
 	color: yellowgreen;
 }
+
+.h3_about{
+  margin-left: 35px;
+  margin-top: 30px;
+}
+
+.p_about{
+margin-bottom: 5px;
+}
+
+
 
 /*-------------------------------------------------*/
 
@@ -454,6 +504,7 @@ Mobile navi
 /* ----------------------------------------------- */
 .section-ostatni {
   padding: 0;
+  margin-top: 70px;
 }
 
 .ostatni-showcase {
@@ -534,6 +585,21 @@ cursor: crosshair;
   background-attachment: fixed;
 }
 
+h3 blockquote{
+  
+  position: relative;
+	padding-left: 30px;
+	font-weight: 900;
+	
+	padding: 1em;
+	margin: 1em;
+	max-width: 33em;
+	font-size: 24px;
+
+
+
+}
+
 blockquote {
   padding: 2%;
   font-style: italic;
@@ -553,6 +619,9 @@ blockquote:before {
 
 
 
+
+
+
 /* ----------------------------------------------- */
 /* OSTATNÍ DOVEDNOSTI  */
 /* ----------------------------------------------- */
@@ -561,12 +630,13 @@ blockquote:before {
 }
 
 .plan-box {
-min-height: 300px;
+min-height: 170px;
   background-color: #fff;
   border-radius: 5px;
   width: 90%;
   margin-left: 5%;
   box-shadow: 0 5px 5px #b5b0ab;
+  
 }
 .plan-box:hover{
 	cursor: pointer;
@@ -576,11 +646,13 @@ min-height: 300px;
 box-shadow: rgb(255, 255, 255) 0px 20px 0px -10px, rgb(255, 255, 255) 0px -20px 0px -10px, rgb(255, 255, 255) 20px 0px 0px -10px, rgb(255, 255, 255) -20px 0px 0px -10px, rgb(49, 49, 49) 0px 0px 0px 10px, 5px 5px 15px 5px rgba(197,179,255,0);
 }
 .plan-box div {
-  padding: 15px;
+  padding: 20px 20px 5px 20px;
+  
 
 }
 
 .plan-box div:first-child {
+ 
   background-color: #dadada;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
@@ -588,6 +660,7 @@ box-shadow: rgb(255, 255, 255) 0px 20px 0px -10px, rgb(255, 255, 255) 0px -20px 
 
 .plan-box div:last-child {
   text-align: center;
+  
 }
 
 .plan-price {
@@ -614,7 +687,7 @@ box-shadow: rgb(255, 255, 255) 0px 20px 0px -10px, rgb(255, 255, 255) 0px -20px 
 /* ----------------------------------------------- */
 
 	.about-box{
-		height: 330px;
+		min-height: 220px;
 		padding: 30px;
 		margin-bottom: 100px;
 		border-radius: 10px;
@@ -642,6 +715,10 @@ transition: 1s ease;
 		list-style: none;
 		line-height: 35px;
 	}
+
+  
+
+
 
 
 	/* ----------------------------------------------- */
@@ -728,6 +805,48 @@ ul span {
   opacity : .7;
 }
 
+	/* ----------------------------------------------- */
+
+/* VIDEO GALLERY */
+
+/* ----------------------------------------------- */
+.video-gallery{
+ margin: 0 auto;
+ max-width: 80%;
+}
+
+.video-gallery h1{
+  font-size: 200%;
+  color: #000;
+  font-weight: 300;
+  text-align: center;
+}
+
+
+
+.gallery-container{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  
+  
+  
+}
+
+.video-cover {
+ 
+ 
+ flex: 1 0 30%;
+ margin: 1rem;
+ 
+  
+}
+
+.video-cover iframe{
+  width: 100%;
+  height: 50vh;
+}
 
 
 /* ----------------------------------------------- */
