--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -14,12 +14,12 @@
         margin-right: 1px;
 	}
 		.slider-img{
-	width: 70%;
+	width: 80%;
 }
 }
 
 @media only screen and (max-width: 1023px) {
-body {font-size: 18px;}
+body {font-size: 1rem;}
 section{ padding: 60px 0px; }
 
 .long-copy{
@@ -47,7 +47,7 @@ section{ padding: 60px 0px; }
 
 }
 
-@media only screen and (max-width: 790px) {
+@media only screen and (max-width: 842px) {
 
     body { font-size: 16px; }
     section { padding: 30px 0; }
@@ -55,11 +55,27 @@ section{ padding: 60px 0px; }
     .row,
     .name { padding: 0 4%; }
     .col {
-		width: 100%;
-		height: 90%;
+		width: 50%;
+		height: 50%;
         margin: 0 0 4% 0;
     }
 
+    .section-about .col{
+    width: 100%;
+    }
+
+
+    .section-knowledge { font-size: 150%; 
+    text-align: center;}
+
+   .section-plans .col{
+    width: 100%;
+   }
+
+.lang_switch{
+    margin-left: 10px;
+    margin-top: 40px;
+}
 
     .main-nav { display: none; }
     .mobile-nav-icon {display: inline-block;}
@@ -72,6 +88,7 @@ section{ padding: 60px 0px; }
 
     .main-nav li {
         display: block;
+        
     }
 
     .main-nav li a:link,
@@ -87,8 +104,17 @@ section{ padding: 60px 0px; }
     .sticky .main-nav li a:visited { padding: 10px 0; }
     .sticky .mobile-nav-icon { margin-top: 10px; }
     .sticky .mobile-nav-icon i { color: #555; }
+
+    .video-cover{
+        flex: 1 0 80%;
+    }
 }
 
 
 
-@media only screen and (max-width: 480px) {}
+
+@media only screen and (max-width: 555px) {
+
+    .section-knowledge { font-size: 0.8rem; 
+        
+}
