--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -1,3 +1,11 @@
+@media only screen and (max-width: 1560px) {  
+    .top-az-pict{display: none;}
+   
+}
+
+
+
+
 @media only screen and (max-width: 1200px) {
 	.name{
 		width: 100%;
@@ -6,6 +14,9 @@
 	.row {
 		padding: 0 2px;
 	}
+
+  
+
 }
 
 @media only screen and (max-width: 1080px){
@@ -43,11 +54,10 @@ section{ padding: 60px 0px; }
 	.contact-form { width: 80%; }
 
 
-
-
+   
 }
 
-@media only screen and (max-width: 842px) {
+@media only screen and (max-width: 854px) {
 
     body { font-size: 16px; }
     section { padding: 30px 0; }
@@ -60,6 +70,19 @@ section{ padding: 60px 0px; }
         margin: 0 0 4% 0;
     }
 
+   
+
+    .sticky .main-nav {
+        display: none;
+    }
+
+    
+.main-nav li{
+    display: none;
+}
+    .sticky .menuActive  li{
+        display: block;
+    }
     .section-about .col{
     width: 100%;
     }
@@ -74,26 +97,34 @@ section{ padding: 60px 0px; }
 
 .lang_switch{
     margin-left: 10px;
-    margin-top: 40px;
+   
 }
 
     .main-nav { display: none; }
     .mobile-nav-icon {display: inline-block;}
-
+    
     .main-nav {
         float: left;
         margin-top: 30px;
-        margin-left: 25px;
+        margin-left: 34%;
     }
-
+    .mobile-nav-icon{
+        position: relative;
+        
+       
+    }
+    
     .main-nav li {
-        display: block;
+       
+        
+        width: 100%;       
         
     }
-
+  
+    
     .main-nav li a:link,
     .main-nav li a:visited {
-        display: block;
+       display: block;
         border: 0;
         padding: 10px 0;
         font-size: 100%;
@@ -102,12 +133,15 @@ section{ padding: 60px 0px; }
 
     .sticky .main-nav li a:link,
     .sticky .main-nav li a:visited { padding: 10px 0; }
+
     .sticky .mobile-nav-icon { margin-top: 10px; }
     .sticky .mobile-nav-icon i { color: #555; }
 
     .video-cover{
         flex: 1 0 80%;
     }
+
+    
 }
 
 
